--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -4,15 +4,37 @@
 
 body {
     font-family: Helvetica, sans-serif !important;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    height: 100%;
 }
+
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper main {
+    flex: 1;
+}
+
+@supports (height: 100dvh) {
+    body {
+        min-height: 100dvh;
+    }
+}
+
 * {
     box-sizing: border-box !important;
 }
 
 #app {
-    max-width: 1440px;
+    max-width: 1408px;
     margin: 0 auto;
-    padding: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 a {
@@ -22,7 +44,7 @@ a {
 
 h1 {
     font-size: 48px !important;
-    font-weight: 400 !important ;
+    font-weight: 400 !important;
     line-height: 64px !important;
 }
 
