--- a/src/app/styles/quasar.css
+++ b/src/app/styles/quasar.css
@@ -6,7 +6,6 @@
     border: 1px solid var(--color--grey-375) !important;
 }
 
-
 .q-btn--rectangle {
     border-radius: 32px !important;
 }
@@ -14,7 +13,7 @@
 .q-btn {
     text-transform: none !important;
     box-shadow: none !important;
-    background-color: var(--color--grey-25) !important;
+    background-color: var(--color--grey-25);
 }
 
 .q-btn::before {
@@ -23,4 +22,8 @@
 
 .q-btn--outline:before {
     border-color: var(--color--grey-375) !important;
+}
+
+.q-focus-helper {
+    border: none !important;
 }
