--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -33,8 +33,6 @@ body {
 #app {
     max-width: 1408px;
     margin: 0 auto;
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 a {
@@ -73,7 +71,6 @@ h3,
 h4,
 h5,
 svg,
-button,
-span {
+button {
     color: #1a1a1a;
 }
