--- a/src/shared/ui/layout/Header/style.css
+++ b/src/shared/ui/layout/Header/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 16px 20px 16px;
+    padding: 20px;
 }
 
 .header-nav {
@@ -15,6 +15,6 @@
     padding: 6px 10px;
     color: var(--color--grey-525);
 }
-.active{
-  color: black;
+.active {
+    color: black;
 }
