--- a/src/app/styles/quasar.css
+++ b/src/app/styles/quasar.css
@@ -14,6 +14,15 @@
     text-transform: none !important;
     box-shadow: none !important;
     background-color: var(--color--grey-25);
+    line-height: 1em;
+    padding: 12px 16px !important;
+}
+.q-btn__content{
+    line-height: normal;
+    font-size: 16px 
+}
+.q-btn .q-icon{
+    font-size: 1em !important;
 }
 
 .q-btn::before {
