--- a/src/app/styles/style.css
+++ b/src/app/styles/style.css
@@ -38,6 +38,7 @@ body {
 a {
     text-decoration: none;
     color: inherit;
+    font-size: 16px;
 }
 
 h1 {
@@ -62,6 +63,10 @@ h4 {
     font-size: 20px !important;
     font-weight: 400 !important;
     line-height: 28px !important;
+}
+
+p{
+    font-size: 16px;
 }
 
 @media (min-width: 640px) {
